# pico-read-writer-mutex

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
include/: read_writer_mutex.h
src/: read_writer_mutex.c
